--- a/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
+++ b/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
@@ -283,7 +283,7 @@
      "text": [
       "  0%|                                                                                                                    | 0/3 [00:00<?, ?it/s]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:492: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
       "  warnings.warn(\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:25<00:00,  8.52s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:25<00:00,  8.53s/it]\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time:  25.567378997802734  seconds\n"
+      "execution time:  25.596168518066406  seconds\n"
      ]
     }
    ],
@@ -332,51 +332,44 @@
      "output_type": "stream",
      "text": [
       "Sample output:\n",
-      "{'output': [{'error': 'No errors.',\n",
-      "             'response': ['<bos><start_of_turn>user\\n'\n",
-      "                          'instruction: Generate one question and its '\n",
-      "                          'corresponding answer based on context. Following '\n",
-      "                          'the format and structure of the examples below to '\n",
-      "                          'include the same context, question, and answer in '\n",
-      "                          'the response.\\n'\n",
-      "                          'context: In 1948, Claude E. Shannon published A '\n",
-      "                          'Mathematical Theory of\\n'\n",
-      "                          'Communication (Shannon, 1948) establishing the '\n",
-      "                          'theory of\\n'\n",
-      "                          'information. In his article, Shannon introduced the '\n",
-      "                          'concept of\\n'\n",
-      "                          'information entropy for the first time. We will '\n",
-      "                          'begin our journey here.\\n'\n",
-      "                          'question: Who published A Mathematical Theory of '\n",
-      "                          'Communication in 1948?\\n'\n",
-      "                          'answer: Claude E. Shannon.\\n'\n",
-      "                          'context: Snoopy can be selfish, gluttonous, and '\n",
-      "                          'lazy at times, and occasionally mocks his owner, '\n",
-      "                          'Charlie Brown. \\n'\n",
-      "                          'But on the whole, he shows great love, care, and '\n",
-      "                          'loyalty for his owner (even though he cannot even '\n",
-      "                          'remember \\n'\n",
-      "                          'his name and always refers to him as \"the '\n",
-      "                          'round-headed kid\"). In the 1990s comic strips, he '\n",
-      "                          'is obsessed \\n'\n",
-      "                          'with cookies, particularly the chocolate-chip '\n",
-      "                          'variety. This, and other instances in which he '\n",
-      "                          'indulges in large \\n'\n",
-      "                          'chocolate-based meals and snacks, indicate that '\n",
-      "                          'chocolate is not poisonous to Snoopy, the way it is '\n",
-      "                          'for real dogs.<end_of_turn>\\n'\n",
-      "                          'Question : What does a dog named snoop have an '\n",
-      "                          'obsession with  in some comics from this era?\\n'\n",
-      "                          '\\n'\n",
-      "                          'Answer   The text states clearly Chocolate - chip '\n",
-      "                          'Cookies are what Snoop has been known by having '\n",
-      "                          'such strong interest towards\\n'\n",
-      "                          '\\n'\n",
-      "                          '\\n'\n",
-      "                          '**Note:** Please generate your own unique questions '\n",
-      "                          'within each provided contexts so I am able test my '\n",
-      "                          'understanding properly.**']}],\n",
-      " 'root': <uniflow.node.Node object at 0x7f24ab2152d0>}\n"
+      "{'error': \"'HuggingfaceModelConfig' object has no attribute 'system_prompt'\",\n",
+      " 'traceback': 'Traceback (most recent call last):\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/flow/server.py\", '\n",
+      "              'line 165, in _run_flow\\n'\n",
+      "              '    output = f(input_list)\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/flow/flow.py\", '\n",
+      "              'line 36, in __call__\\n'\n",
+      "              '    nodes = self.run(nodes)\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/flow/transform/transform_huggingface_gemma_flow.py\", '\n",
+      "              'line 47, in run\\n'\n",
+      "              '    return self._model_op(nodes)\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/op/model/model_op.py\", '\n",
+      "              'line 40, in __call__\\n'\n",
+      "              '    value_dict = self._model.run(value_dict)\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/op/model/abs_model.py\", '\n",
+      "              'line 72, in run\\n'\n",
+      "              '    data = self._model_server(serialized_data)\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/op/model/lm/model_server.py\", '\n",
+      "              'line 425, in __call__\\n'\n",
+      "              '    data = self._postprocess(data)\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/op/model/lm/model_server.py\", '\n",
+      "              'line 379, in _postprocess\\n'\n",
+      "              '    response_list = [\\n'\n",
+      "              '  File '\n",
+      "              '\"/home/ubuntu/uniflow/example/transform/../../uniflow/op/model/lm/model_server.py\", '\n",
+      "              'line 380, in <listcomp>\\n'\n",
+      "              \"    response.replace('user\\\\n' + \"\n",
+      "              \"self._model_config.system_prompt + '\\\\n\\\\n' + input_text + \"\n",
+      "              \"'\\\\nmodel', '', 1)\\n\"\n",
+      "              \"AttributeError: 'HuggingfaceModelConfig' object has no \"\n",
+      "              \"attribute 'system_prompt'\\n\"}\n"
      ]
     }
    ],
