--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -25,7 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2aa337",
    "metadata": {},
    "source": [
     "### Update system path"
@@ -34,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ed774f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +48,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf528cb8",
    "metadata": {},
    "source": [
     "### Install helper packages"
@@ -59,7 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e95e8bf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +96,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "673302e5",
    "metadata": {},
    "source": [
     "### Import Dependency"
@@ -194,7 +189,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2e76371",
    "metadata": {},
    "source": [
     "### Prepare sample prompts"
@@ -203,7 +197,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d6453dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +219,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea26845",
    "metadata": {},
    "source": [
     "### Use LLM to generate data\n",
@@ -243,7 +235,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "47b126a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +249,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028a701f",
    "metadata": {},
    "source": [
     "Now we call the `run` method on the `client` object to execute the question-answer generation operation on the data shown above."
@@ -267,7 +257,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e9f3afe1",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +413,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9fe676",
    "metadata": {},
    "source": [
     "## End of the notebook\n",
@@ -439,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "self-instruct-ft",
    "language": "python",
    "name": "python3"
   },
@@ -453,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
