--- a/example/transform/huggingface_long_text_splitter.ipynb
+++ b/example/transform/huggingface_long_text_splitter.ipynb
@@ -236,7 +236,8 @@
     "    prompt_template=guided_prompt,\n",
     "    model_config=HuggingfaceModelConfig(\n",
     "        batch_size=4,\n",
-    "        response_start_key=\"question\", response_format={\"type\": \"json_object\"},\n",
+    "        response_start_key=\"question\", \n",
+    "        response_format={\"type\": \"json_object\"},\n",
     "    ),\n",
     "    auto_split_long_text=True\n",
     ")\n",
