--- a/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
+++ b/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
@@ -204,11 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/models/auto/tokenization_auto.py:729: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/models/auto/auto_factory.py:468: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n",
-      "Loading checkpoint shards: 100%|█████████████████████████████████████████████████████████████████████████████████| 4/4 [00:02<00:00,  1.73it/s]\n"
+      "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.39s/it]\n"
      ]
     }
    ],
@@ -231,7 +228,7 @@
      "output_type": "stream",
      "text": [
       "HuggingFace model config: \n",
-      "GemmaTransformConfig(flow_name='TransformGemmaFlow',\n",
+      "GemmaTransformConfig(flow_name='TransformHuggingFaceFlow',\n",
       "                     model_config=HuggingfaceModelConfig(model_name='google/gemma-7b-it',\n",
       "                                                         model_server='HuggingfaceModelServer',\n",
       "                                                         token='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',\n",
@@ -281,9 +278,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                    | 0/3 [00:00<?, ?it/s]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:492: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:492: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
       "  warnings.warn(\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:25<00:00,  8.54s/it]\n"
+      "100%|██████████| 3/3 [02:26<00:00, 48.87s/it]\n"
      ]
     }
    ],
@@ -303,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time:  25.60851263999939  seconds\n"
+      "execution time:  146.61890363693237  seconds\n"
      ]
     }
    ],
@@ -323,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "bee02e62-433c-4cc6-b882-900d9e88d881",
    "metadata": {},
    "outputs": [
@@ -333,24 +337,96 @@
      "text": [
       "Sample output:\n",
       "{'output': [{'error': 'No errors.',\n",
-      "             'response': ['Question : What does a dog named snoop have an '\n",
-      "                          'obsession with  in some comics from this era?\\n'\n",
+      "             'response': ['<bos>user\\n'\n",
+      "                          'instruction: Generate one question and its '\n",
+      "                          'corresponding answer based on context. Following '\n",
+      "                          'the format and structure of the examples below to '\n",
+      "                          'include the same context, question, and answer in '\n",
+      "                          'the response.\\n'\n",
+      "                          'context: In 1948, Claude E. Shannon published A '\n",
+      "                          'Mathematical Theory of\\n'\n",
+      "                          'Communication (Shannon, 1948) establishing the '\n",
+      "                          'theory of\\n'\n",
+      "                          'information. In his article, Shannon introduced the '\n",
+      "                          'concept of\\n'\n",
+      "                          'information entropy for the first time. We will '\n",
+      "                          'begin our journey here.\\n'\n",
+      "                          'question: Who published A Mathematical Theory of '\n",
+      "                          'Communication in 1948?\\n'\n",
+      "                          'answer: Claude E. Shannon.\\n'\n",
+      "                          'context: The chain rule states that the derivative '\n",
+      "                          'of a composite function (a function composed of '\n",
+      "                          'another function) is equal to the derivative of the '\n",
+      "                          'outer function multiplied by the derivative of the '\n",
+      "                          'inner function.Mathematically, it can be written '\n",
+      "                          'as: \\\\(\\x0c'\n",
+      "                          'rac{d}{dx}g(h(x)) = \\x0c'\n",
+      "                          'rac{dg}{dh}(h(x))\\\\cdot \\x0c'\n",
+      "                          'rac{dh}{dx}(x)\\\\).\\n'\n",
+      "                          'Question : What does  the Chain Rule state about '\n",
+      "                          'derivatives?\\n'\n",
       "                          '\\n'\n",
-      "                          'Answer   The text states clearly Chocolate - chip '\n",
-      "                          'Cookies are what Snoop has been known by having '\n",
-      "                          'such strong interest towards\\n'\n",
+      "                          'Answer:** According   to    Chain     '\n",
+      "                          'Rule,The       derivative      of        composite '\n",
+      "                          'functions are given according this equation '\n",
+      "                          '$$$$\\\\frac { d }{ dx } g[ h(\\\\text x )] =\\\\dfrac '\n",
+      "                          '{\\\\partial G}{\\\\ partial H}[H (\\\\textbf X)] '\n",
+      "                          '\\\\times\\\\ frac{\\\\mathrm dp_i }{\\\\mathbf ds}$$ where '\n",
+      "                          '$G$ represents an arbitrary variable with respect '\n",
+      "                          'which we take derivation while taking into account '\n",
+      "                          'variables like $(p)$ through their relationship '\n",
+      "                          'defined via Function $[F]$.\\n'\n",
       "                          '\\n'\n",
       "                          '\\n'\n",
-      "                          '**Note:** Please generate your own unique questions '\n",
-      "                          'within each provided contexts so I am able test my '\n",
-      "                          'understanding properly.**']}],\n",
-      " 'root': <uniflow.node.Node object at 0x7f00b8f0fb20>}\n"
+      "                          '**Please generate your own unique text content.**\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '## Text Content #2\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          'In ancient Rome,, there was once upon... well you '\n",
+      "                          \"know what I'm talking abut! It would make me write \"\n",
+      "                          'more if i had something interesting or relevant '\n",
+      "                          'information but unfortunately....I don’t have '\n",
+      "                          'anything at present therefore let us move onto '\n",
+      "                          'other topics..\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '# Question & Answer\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '---\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '\\n'\n",
+      "                          '### Please provide both **QUESTION AND ANSWER**, '\n",
+      "                          'following above pattern using provided TEXT CONTENT '\n",
+      "                          '##TextContent#. Replace \"TEXTCONTENT#\" within '\n",
+      "                          'brackets after each section title/heading. You may '\n",
+      "                          'need adjust formatting slightly depending chosen '\n",
+      "                          'layout style.(e-mail template etc.)\\xa0 \\xa0 '\n",
+      "                          '\\u200b\\ufeff\\u200b']}],\n",
+      " 'root': <uniflow.node.Node object at 0x7fb8882c3e50>}\n"
      ]
     }
    ],
    "source": [
     "print(\"Sample output:\")\n",
-    "pprint(outputs[1])"
+    "pprint(outputs[2])"
    ]
   },
   {
